--- a/preferences-menu.html
+++ b/preferences-menu.html
@@ -1,16 +1,16 @@
-<div id="menu" style="DISPLAY: block;z-index: 2;">
+<div id="idPrefMenu" style="DISPLAY: block;z-index: 2;">
 <div style="background: #FF9D00; margin: 0 0 0 0; padding: 0px 0px 0px 0px; font-size: 16px; border-bottom: 15px solid #FF2A13; color: #000000;font-size: 18px;"><img src="<!--#include virtual="logo-data.txt" -->" height="57" width="57" style="margin-bottom: -20px; padding-bottom: 0px;border-bottom:0px;"/>metro mobile: preferences</div>
 <div style="margin: 0 10px 0 8px;">
 <br /><div style="font-size: medium;">manage stored addresses:</div>
 <ul>
-<li><a href="javascript:switchpage('add');">add</a></li>
-<li><a href="javascript:loadmodify();">edit</a></li>
-<li><a href="javascript:loaddelete();">delete</a></li>
-<li><a href="javascript:ShowHide('MOO')">reorder</a></li>
+<li><a href="javascript:fnSwitchPage('idAddMain');">add</a></li>
+<li><a href="javascript:fnLoadModify();">edit</a></li>
+<li><a href="javascript:fnLoadDelete();">delete</a></li>
+<li><a href="javascript:fnShowHide('MOO')">reorder</a></li>
 </ul>
 <br /><div style="font-size: medium;">other options:</div>
 <ul>
-<li><a href="javascript:switchpage('tripdefaults');">trip defaults</a></li>
+<li><a href="javascript:fnSwitchPage('idTripDefaults');">trip defaults</a></li>
 </ul>
 <br />
 <div style="float: right;"><a href="index.html">main</a></div><br /><hr />
