--- a/preferences.html
+++ b/preferences.html
@@ -10,15 +10,15 @@
 </script>
 <link rel="apple-touch-icon" href="logo.png" />
 </head>
-<body onLoad="updatepage();">
+<body onLoad="fnUpdatePage();">
 <!--#include virtual="preferences-menu.html" -->
 <!--#include virtual="preferences-add.html" -->
 <!--#include virtual="preferences-delete.html" -->
 <!--#include virtual="preferences-modify.html" -->
 <!--#include virtual="preferences-tripdefaults.html" -->
-<div id="genericmodal" class="modalpage" style="display: none;"><div class="modalpopup">
-<span id="generictext"></span>
-<br /><br /><input type="button" value="okay" class="modalokay" onClick="ShowHide('genericmodal');" />
+<div id="idGenericModal" class="modalpage" style="display: none;"><div class="modalpopup">
+<span id="idGenericModalText"></span>
+<br /><br /><input type="button" value="okay" class="modalokay" onClick="fnShowHide('idGenericModal');" />
 </div></div>
 </body>
 </html>
