various changes that I'm not quite sure what I changed

--- a/preferences.html
+++ b/preferences.html
@@ -15,6 +15,7 @@
 <!--#include virtual="preferences-add.html" -->
 <!--#include virtual="preferences-delete.html" -->
 <!--#include virtual="preferences-modify.html" -->
+<!--#include virtual="preferences-reorder.html" -->
 <!--#include virtual="preferences-tripdefaults.html" -->
 <div id="idGenericModal" class="modalpage" style="display: none;"><div class="modalpopup">
 <span id="idGenericModalText"></span>
