--- a/preferences-menu.html
+++ b/preferences-menu.html
@@ -6,7 +6,7 @@
 <li><a href="javascript:fnSwitchPage('idAddMain');">add</a></li>
 <li><a href="javascript:fnLoadModify();">edit</a></li>
 <li><a href="javascript:fnLoadDelete();">delete</a></li>
-<li><a href="javascript:fnShowHide('MOO')">reorder</a></li>
+<li><a href="javascript:fnSwitchPage('idReorderMain');">reorder</a></li>
 </ul>
 <br /><div style="font-size: medium;">other options:</div>
 <ul>
