moved common functions from preferences.js and tripplanner.js to common.js

--- a/preferences.html
+++ b/preferences.html
@@ -7,6 +7,7 @@
 </style>
 <script type="text/javascript" language="Javascript">
 <!--#include virtual="preferences.js" -->
+<!--#include virtual="common.js" -->
 </script>
 <link rel="apple-touch-icon" href="logo.png" />
 </head>
