switched alerts to modals and added more error handling functions to handleerror function

--- a/tripplanner.html
+++ b/tripplanner.html
@@ -36,7 +36,7 @@
 <input type="checkbox" style="display: none;" value="Y" name="Atr" />
 
 
-<div style="float: left;">start:</div><div style="float: right;">donate</div><br />
+<div style="float: left;">start:</div><div style="float: right;">about</div><br />
 <select name="nmOriginationPull" onchange="fnLocSelect();">
 <script type="text/javascript" language="Javascript">
 fnFillLoc();
