finished that bloody remove stock locations function

--- a/preferences-add.html
+++ b/preferences-add.html
@@ -8,6 +8,8 @@ location:<br />
 <input name="nmLocAddress" size="25" maxlength="80" /><br /><br />
 <input type="button" value="add location" onclick="fnAddLoc();" />
 </form>
+<input type="button" value="add stock locations" onclick="fnAddStockLoc()" />
+
 <div style="float: right;"><a href="javascript:;" onclick="fnSwitchPage('idPrefMenu');">preferences</a></div>
 <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><hr />
 
