--- a/preferences-delete.html
+++ b/preferences-delete.html
@@ -9,9 +9,9 @@ location to delete:<br />
 <br />
 <input type="button" value="delete location" onClick="fnDeleteVerify();">
 </form>
-<form action="javascript:fnShowHide('idDeleteAllConfirmModal');">
+<input type="button" value="delete stock locations" onClick="fnDeleteStockLoc();">
 <input type="button" value="delete all locations" onClick="fnShowHide('idDeleteAllConfirmModal');">
-</form>
+
 <div style="float: right;"><a href="javascript:;" onclick="fnSwitchPage('idPrefMenu');">preferences</a></div>
 <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><hr />
 
