set preferences page so that tripdefaults setup isn't loaded when the page is, just when we switch there

--- a/preferences-menu.html
+++ b/preferences-menu.html
@@ -10,7 +10,7 @@
 </ul>
 <br /><div style="font-size: medium;">other options:</div>
 <ul>
-<li><a href="javascript:fnSwitchPage('idTripDefaults');">trip defaults</a></li>
+<li><a href="javascript:fnLoadTripDefaults();">trip defaults</a></li>
 </ul>
 <br />
 <div style="float: right;"><a href="index.html">main</a></div><br /><hr />
