--- a/preferences.html
+++ b/preferences.html
@@ -11,7 +11,7 @@
 </script>
 <link rel="apple-touch-icon" href="logo.png" />
 </head>
-<body onLoad="fnUpdatePage();">
+<body onLoad="fnSwitchPage('idPrefMenu');">
 <!--#include virtual="preferences-menu.html" -->
 <!--#include virtual="preferences-add.html" -->
 <!--#include virtual="preferences-delete.html" -->
