lots of stuff: 1. dealt with back/forward in preferences, 2. set up the logo as a javascript load in preferences. a few other tweaks

--- a/preferences-add.html
+++ b/preferences-add.html
@@ -1,14 +1,15 @@
 <div id="idAddMain" style="DISPLAY: none; z-index: 2;">
-<div style="background: #FF9D00; margin: 0 0 0 0; padding: 0px 0px 0px 0px; font-size: 16px; border-bottom: 15px solid #FF2A13; color: #000000;font-size: 18px;"><img src="logo.png" height="57" width="57" style="margin-bottom: -20px; padding-bottom: 0px;border-bottom:0px;"/>metro mobile: add location</div>
+<div style="background: #FF9D00; margin: 0 0 0 0; padding: 0px 0px 0px 0px; font-size: 16px; border-bottom: 15px solid #FF2A13; color: #000000;font-size: 18px;"><img id="idAddMainidLogo" />metro mobile: add location</div>
 <div style="margin: 0 10px 0 8px;">
 <form name="nmAddForm" action="javascript:fnAddLoc();">
 name:<br />
 <input name="nmLocName" size="25" maxlength="80" /><br />
 location:<br />
 <input name="nmLocAddress" size="25" maxlength="80" /><br /><br />
-<input type="button" value="add location" onclick="fnAddLoc();" />
+<input type="button" value="add location" onclick="fnAddLoc();" /><br /><br />
+<input type="button" value="add starter locations" onclick="fnAddStockLoc()" />
 </form>
-<input type="button" value="add stock locations" onclick="fnAddStockLoc()" />
+
 
 <div style="float: right;"><a href="javascript:;" onclick="fnSwitchPage('idPrefMenu');">preferences</a></div>
 <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><hr />
