--- a/preferences-reorder.html
+++ b/preferences-reorder.html
@@ -1,5 +1,6 @@
 <div id="idReorderMain" style="DISPLAY: none; z-index: 2;">
-<div style="background: #FF9D00; margin: 0 0 0 0; padding: 0px 0px 0px 0px; font-size: 16px; border-bottom: 15px solid #FF2A13; color: #000000;font-size: 18px;"><img src="logo.png" height="57" width="57" style="margin-bottom: -20px; padding-bottom: 0px;border-bottom:0px;"/>metro mobile: reorder locations</div>
+<div style="background: #FF9D00; margin: 0 0 0 0; padding: 0px 0px 0px 0px; font-size: 16px; border-bottom: 15px solid #FF2A13; color: #000000;font-size: 18px;"><img id="idReorderMainidLogo" />
+metro mobile: reorder locations</div>
 <div style="margin: 0;">
 <div style="float: right;"><input type="button" value="cancel" onclick="fnUnloadReorder();fnSwitchPage('idPrefMenu');"></div>
 <input type="button" value="save locations" onclick="fnUnloadReorder();fnSaveCookieArray();fnSwitchPage('idPrefMenu');" />
