--- a/preferences.html
+++ b/preferences.html
@@ -5,13 +5,13 @@
 <style type="text/css">
 <!--#include virtual="tripplanner.css" -->
 </style>
-<script type="text/javascript" language="Javascript">
+<script>
 <!--#include virtual="preferences.js" -->
 <!--#include virtual="common.js" -->
 </script>
 <link rel="apple-touch-icon" href="logo.png" />
 </head>
-<body onLoad="fnSwitchPage('idPrefMenu');">
+<body onload="fnLoadLogo('idPrefMenu');">
 <!--#include virtual="preferences-menu.html" -->
 <!--#include virtual="preferences-add.html" -->
 <!--#include virtual="preferences-delete.html" -->
