made sure we're not using an empty href with an onclick anywhere,

--- a/preferences-tripdefaults.html
+++ b/preferences-tripdefaults.html
@@ -66,7 +66,7 @@ days displayed:<br /><select name="nmNumberDays">
 <option value="Y">yes</option>
 </select>
 <br /><br /><input type="button" onclick="fnSavePrefs();" value="save trip defaults"></form>
-<div style="float: right;"><a href="javascript:;" onclick="fnSwitchPage('idPrefMenu');">preferences</a></div>
+<div style="float: right;"><a href="javascript:fnSwitchPage('idPrefMenu');">preferences</a></div>
 <br /><br /><hr />
 <div style="font-size: x-small;">copyright 2010 nicholas barnard</div>
 </div>
