--- a/tripplanner.html
+++ b/tripplanner.html
@@ -71,9 +71,9 @@ fnFillTime();
 
 <br /><br />
 
-<div id="idNoOpt" style="DISPLAY: block;"><div style="float: left;"><a onclick ="fnShowAdditional();" href="javascript:;" >additional options</a></div><div style="float: right;"><a href="preferences.html">preferences</a></div><br /><hr /></div>
+<div id="idNoOpt" style="DISPLAY: block;"><div style="float: left;"><a href="javascript:fnShowAdditional();">additional options</a></div><div style="float: right;"><a href="preferences.html">preferences</a></div><br /><hr /></div>
 <div id="idAddtlOpt" style="DISPLAY: none;">
-<div style="float: left;"><a onclick ="fnHideAdditional();" href="javascript:;" >hide additional options</a></div><div style="float: right;"><a href="preferences.html">preferences</a></div><br /><hr />
+<div style="float: left;"><a href="javascript:fnHideAdditional();">hide additional options</a></div><div style="float: right;"><a href="preferences.html">preferences</a></div><br /><hr />
 
 maximum walking: 
 <select name="Walk">
