--- a/preferences-add.html
+++ b/preferences-add.html
@@ -11,7 +11,7 @@ location:<br />
 </form>
 
 
-<div style="float: right;"><a href="javascript:;" onclick="fnSwitchPage('idPrefMenu');">preferences</a></div>
+<div style="float: right;"><a href="javascript:fnSwitchPage('idPrefMenu');">preferences</a></div>
 <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><hr />
 
 <div style="font-size: x-small;">copyright 2010 nicholas barnard</div>
