--- a/preferences-delete.html
+++ b/preferences-delete.html
@@ -13,7 +13,7 @@ location to delete:<br />
 <input type="button" value="delete all locations" onClick="fnShowHide('idDeleteAllConfirmModal');">
 </form>
 
-<div style="float: right;"><a href="javascript:;" onclick="fnSwitchPage('idPrefMenu');">preferences</a></div>
+<div style="float: right;"><a href="javascript:fnSwitchPage('idPrefMenu');">preferences</a></div>
 <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><hr />
 
 <div style="font-size: x-small;">copyright 2010 nicholas barnard</div>
