--- a/preferences-modify.html
+++ b/preferences-modify.html
@@ -9,7 +9,7 @@ location to edit:<br />
 <br />
 <input type="button" value="edit location" onClick="fnLoadModifyLoc();">
 </form>
-<div style="float: right;"><a href="javascript:;" onclick="fnSwitchPage('idPrefMenu');">preferences</a></div>
+<div style="float: right;"><a href="javascript:fnSwitchPage('idPrefMenu');">preferences</a></div>
 <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><hr />
 
 <div style="font-size: x-small;">copyright 2010 nicholas barnard</div>
@@ -26,7 +26,7 @@ location:<br />
 <input name="nmLocAddress" size="25" maxlength="80" /><br /><br />
 <input type="button" value="edit location" onclick="fnModifyLoc();" />
 </form>
-<div style="float: right;"><a href="javascript:;" onclick="fnSwitchPage('idPrefMenu');">preferences</a></div>
+<div style="float: right;"><a href="javascript:fnSwitchPage('idPrefMenu');">preferences</a></div>
 <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><hr />
 
 <div style="font-size: x-small;">copyright 2010 nicholas barnard</div>
